<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="swap_languages">Swap languages</string>
    <string name="enter_a_text_to_translate">Enter a text to translate</string>
    <string name="translate">Translate</string>
    <string name="copy">Copy</string>
    <string name="play_loud">Play Loud</string>
    <string name="copied_to_clipboard">Text copied to clipboard</string>
    <string name="history">History</string>
    <string name="error_service_unavailable">Service Unavailable</string>
    <string name="client_error">Client Error</string>
    <string name="server_error">Server Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="record_audio">Record Audio</string>
    <string name="delete_translate_history">Delete Translation HIstory</string>
    <string name="confirm">Confirm</string>
    <string name="clear_history">Clear History?</string>
    <string name="clear_history_dialog">Click confirm to clear translation history</string>
    <string name="cancel">Cancel</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="history_deleted">Translate history deleted</string>
    <string name="undo">Undo</string>
    <string name="error_speeach_recog_not_available">\"Speech recognition is not available\"</string>
    <string name="apply">Apply</string>
    <string name="stop_recording">Stop recording</string>
    <string name="record_again">Record again</string>
    <string name="listening">Listening</string>
    <string name="start_talking">Click record and start talking</string>
</resources>